# osrs-hiscores-scrape

./: .gitignore  HSAccountTypes.md  HSTypes.md  README.md  analyse_category.py  common.py  debug.py  filter.py  get_combat.py  inf.txt  lookup.py  lookup_names.py  lookup_names_scrape.py  merge.py  pyproject.toml  request.py  requirements.txt  run.py  scrape_hs.py  sort.py  temp_merge.py  test.txt
.github/workflows/: format.yml  run_py_job.yml
deprecated/: pool.py  request.py  sort.py  stats_handler.py
misc/: check_proxies.py  debug.py
osrs_hiscore_scrape/: __init__.py
osrs_hiscore_scrape/cli/: helpers.py  presets.py
osrs_hiscore_scrape/deprecated/: sort.py
osrs_hiscore_scrape/job/: job_builder.py  job_handlers.py  mappers.py  records.py
osrs_hiscore_scrape/log/: decorators.py  logger.py
osrs_hiscore_scrape/misc/: debug.py
osrs_hiscore_scrape/request/: common.py  constants.py  (+6 more)
request/: common.py  dto.py  errors.py  extract.py  job.py  request.py  results.py  worker.py
scripts/: analyse_category.py  check_proxies.py  fetch_max_page.py  fetch_pages.py  fetch_user.py  filter.py  filter_category.py  filter_hs.py  lookup.py  max_page.py  scrape_hs.py  test.py
src/: common.py  scrape.py
stats/: common.py
test/: debug.py
tests/: debug.py
tools/: generate_hs_type.py  hs_type_generator.py  run_generators.py
util/: benchmarking.py  combat_lvl_handler.py  combat_stats_handler.py  common.py  export.py  get_combat.py  guard_clause_handler.py  io.py  json_wrapper.py  log.py  mem_profile.py  retry_handler.py  stats_handler.py  threading_handler.py
(+94 files in other folders)
